objects/Eve_Bar__c.object
<CustomObject>
    <fields>
        <fullName>Eve_Bar2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Eve Bar2</label>
        <referenceTo>Eve_Bar__c</referenceTo>
        <relationshipLabel>Eves Bar (Eve Bar2)</relationshipLabel>
        <relationshipName>Eves_Bar1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eve_Bar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Eve Bar</label>
        <referenceTo>Eve_Bar__c</referenceTo>
        <relationshipLabel>Eves Bar</relationshipLabel>
        <relationshipName>Eves_Bar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>My_Text_Field__c</fullName>
        <label>My Text Field</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Eve Bar</label>
    <nameField>
        <label>Eve Bar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eves Bar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>